--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-image: url('https://melowee.github.io/Images/miku_transparent2.png'), url('https://melowee.github.io/Images/ia_transparent.png');
-	background-color: white;
+	background-color: silver;
 	background-position: left 100px, right 100px;
 	background-repeat: no-repeat, no-repeat;
 	background-size: 50%;
