--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('https://melowee.github.io/Images/miku_transparent.png'), url('https://melowee.github.io/Images/ia_transparent.png');
+	background-image: url('https://melowee.github.io/Files/miku_transparent.png'), url('https://melowee.github.io/Files/ia_transparent.png');
 	background-color: silver;
 	background-position: left 100px, right 100px;
 	background-repeat: no-repeat, no-repeat;
